objective3/k8s/deployment-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: sgirald2019/entrega2-ds:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: flask-storage
          mountPath: /app/uploads
      volumes:
      - name: flask-storage
        persistentVolumeClaim:
          claimName: flask-efs-pvc
